--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
