--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ebrahimnigus.github.io/My-portfolio",
   "name": "my-portfolio",
   "private": true,
   "version": "0.0.0",
